changes to package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://megscholl.github.io/megschollreact.github.io",
+  "homepage": "https://megscholl/megschollreact.github.io",
   "name": "myown-try101",
   "version": "0.1.0",
   "private": true,
