took megscholl off end of homepage url in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://megscholl.github.io/megscholl",
+  "homepage": "https://megscholl.github.io/",
   "name": "myown-try101",
   "version": "0.1.0",
   "private": true,
