--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
-    "reactstrap": "^6.0.1"
+    "react-semantic-ui": "^0.2.0",
+    "reactstrap": "^6.0.1",
+    "semantic-ui-react": "^0.81.1"
   },
   "scripts": {
     "start": "react-scripts start",
