--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "1.1.4",
     "react-semantic-ui": "^0.2.0",
     "reactstrap": "^6.0.1",
-    "semantic-ui-react": "^0.81.1"
+    "semantic-ui-react": "^0.81.1",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
